News Version 1.0 Final
======================

- First public release of the module.

Version 1.01
------------

* Fixed undefined variable: news_tag_name in file /modules/news/article.php line 367 (sato-san)
* Initialise $sprocketsModule variable to avoid warning in article.php (sato-san).

Version 1.1
-----------

* Updated to meet ICMS 1.3.x specification. No longer compatible with 1.2.x.