@@ -193,6 +193,25 @@ class NewsArticle extends icms_ipf_seo_Object {
 	}
 	
 	/**
+	 * Customise object itemLink to append the SEO-friendly string.
+	 */
+	public function getItemLinkWithSEOString()
+	{
+		$short_url = $this->short_url();
+		if (!empty($short_url))
+		{
+			$seo_url = '<a href="' . $this->getItemLink(TRUE) . '&amp;title=' . $this->short_url() 
+					. '">' . $this->getVar('title', 'e') . '</a>';
+		}
+		else
+		{
+			$seo_url = $this->getItemLink(FALSE);
+		}
+		
+		return $seo_url;
+	}
+	
+	/**
 	 * Converts the display_topic_image field to human readable value
 	 * 
 	 * @return string
