@@ -13,3 +13,4 @@ Version 1.1
 -----------
 
 * Updated to meet ICMS 1.3.x specification. No longer compatible with 1.2.x.
+* SEO friendly URLs for articles.
